
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout="@+id/relative"
    tools:context=".MakeQuiz"
    android:background="@drawable/background_all">


             <EditText
                 android:inputType="text"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:hint="Title: "
                 android:id="@+id/editTextTitle"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="119dp" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter Question: "
                android:ems="10"
                android:id="@+id/editTextQuestion"
                android:layout_below="@+id/editTextTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

             <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter Answer 1: "
                android:ems="10"
                android:id="@+id/editTextAnswerOne"
                 android:layout_below="@+id/editTextQuestion"
                 android:layout_alignLeft="@+id/editTextQuestion"
                 android:layout_alignStart="@+id/editTextQuestion" />

             <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter Answer 2: "
                android:ems="10"
                android:id="@+id/editTextAnswerTwo"
                 android:layout_below="@+id/editTextAnswerOne"
                 android:layout_alignLeft="@+id/editTextAnswerOne"
                 android:layout_alignStart="@+id/editTextAnswerOne" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter Answer 3: "
                android:ems="10"
                android:id="@+id/editTextAnswerThree"
                android:layout_below="@+id/editTextAnswerTwo"
                android:layout_alignLeft="@+id/editTextAnswerTwo"
                android:layout_alignStart="@+id/editTextAnswerTwo" />

             <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter Correct Answer: "
                android:ems="10"
                android:id="@+id/editTextCorrectAnswer"

                 android:layout_below="@+id/editTextAnswerThree"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/submit_button"
        android:id="@+id/submit_button"
        android:background="@drawable/submit_button"
        android:layout_alignLeft="@+id/editTextCorrectAnswer"
        android:layout_alignStart="@+id/editTextCorrectAnswer"
        android:layout_alignTop="@+id/all_quizzes_button"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/all_quizzes"
        android:id="@+id/all_quizzes_button"
        android:layout_gravity="right"
        android:background="@drawable/all_quiz_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/homeButton"
        android:background="@drawable/ic_home_black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:background="@drawable/quizem_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
