...
    >

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="215dp"
        android:text="@string/title_activity_quiz"
        android:id="@+id/quiz_button"
        android:background="@drawable/quiz_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="200dp"
...
