...


        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/make_quiz"
            android:id="@+id/quiz_make"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/make_quiz_button"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/quiz_all"
            android:layout_alignStart="@+id/quiz_all" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/all_quizzes"
            android:id="@+id/quiz_all"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/all_quiz_button"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/quiz_take"
            android:layout_alignStart="@+id/quiz_take" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
