...

    </LinearLayout>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/nextButton"
        android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <RadioGroup
...


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New RadioButton"
        android:id="@+id/questionOneButton"
        android:layout_gravity="center_horizontal" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New RadioButton"
...
